Update Plan. Refactor index.html

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test-fiber",
+  "name": "react-three-fiber-cannon-drei-004",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
